@@ -1,3 +1,11 @@
+Change the 'validate' API so it works for updates too.
+Change the 'modify' API so it sends a hash of attr=>[:op,data] which makes
+it easier to determine which entries have been modified.
+Fix modify, add and compare to normalise attribute names using the schema if
+there is one.
+
+20050721
+
 Added a whole loada Schema stuff.
 Moved exceptions under LDAP::ResultError for consistency with ruby-ldap.
 Changed the parsed [filter] format to include a MatchingRule object always
